<resources>
    <string name="app_name">Catatan Novel</string>
    <string name="novel_name">Judul Novel</string>
    <string name="author">Penulis</string>
    <string name="description">Deskripsi</string>
    <string name="my_name">Hafiz Ibrahim</string>
    <string name="my_email">hafizzibrahimm0@gmail.com</string>
    <string name="contact_person">Contact Person</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linked In</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="my_instagram">hafizibrahimm_</string>
    <string name="my_linkedin">https://www.linkedin.com/in/hafiz-ibrahim-1b142628a/</string>
    <string name="my_whatsapp">+62 8787 4711 053</string>
    <string-array name="data_name">
        <item>Perahu Kertas</item>
        <item>Sang Pemimpi</item>
        <item>Rumah Kaca</item>
        <item>Cantik Itu Luka</item>
        <item>Daun Yang Jatuh Tak Pernah Membenci Angin</item>
        <item>Negeri 5 Menara</item>
        <item>Ronggeng Dukuh Paruk</item>
        <item>Anak Semua Bangsa</item>
        <item>Laskar Pelangi</item>
        <item>Bumi Manusia</item>
    </string-array>
    <string-array name="data_author">
        <item>Dee Lestari</item>
        <item>Andrea Hirata</item>
        <item>Pramoedya Ananta Toer</item>
        <item>Eka Kurniawan</item>
        <item>Tere Liye</item>
        <item>A. Fuadi</item>
        <item>Ahmad Tohari</item>
        <item>Pramoedya Ananta Toer</item>
        <item>Andrea Hirata</item>
        <item>Pramoedya Ananta Toer</item>
    </string-array>
</resources>