<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="32dp"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:padding="20dp"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
                tools:text="@string/novel_name" />

            <TextView
                android:id="@+id/tv_item_author"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="5"
                card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
                card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                card_view:layout_constraintVertical_bias="0.0"
                tools:text="@string/author" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:maxLines="5"
                card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
                card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                card_view:layout_constraintVertical_bias="0.0"
                tools:text="@string/description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>